erDiagram
    USER {
        int user_id PK
        varchar username UK
        varchar email UK
        varchar password_hash
        varchar profile_pic_url
        datetime created_at
    }

    PROJECT {
        int project_id PK
        varchar title
        text logline
        varchar genre
        int created_by FK
        datetime created_at
        datetime updated_at
    }

    PROJECT_COLLABORATOR {
        int project_id FK,PK
        int user_id FK,PK
        varchar role "e.g., 'Owner', 'Writer', 'Viewer'"
    }

    SCRIPT_VERSION {
        int version_id PK
        int project_id FK
        text script_content
        int version_number
        datetime saved_at
    }

    SCENE {
        int scene_id PK
        int project_id FK
        int scene_number
        varchar slug
        text description
        varchar location_suggestion
        varchar mood_suggestion
        varchar lighting_suggestion
    }

    STORYBOARD_PANEL {
        int panel_id PK
        int scene_id FK
        int panel_number
        varchar image_prompt
        varchar generated_image_url
        varchar manual_image_url
    }

    CHECKLIST_ITEM {
        int item_id PK
        int scene_id FK
        varchar item_text
        boolean is_completed
    }

    CSPACE_MESSAGE {
        int message_id PK
        int project_id FK
        int user_id FK
        text message_content
        varchar attached_image_url
        datetime sent_at
    }

    %% Defining Relationships %%
    USER ||--o{ PROJECT : "creates"
    USER ||--o{ PROJECT_COLLABORATOR : "is_a"
    PROJECT ||--o{ PROJECT_COLLABORATOR : "has"
    PROJECT ||--o{ SCRIPT_VERSION : "has"
    PROJECT ||--o{ SCENE : "contains"
    SCENE ||--o{ STORYBOARD_PANEL : "visualized_by"
    SCENE ||--o{ CHECKLIST_ITEM : "has"
    PROJECT ||--o{ CSPACE_MESSAGE : "contains"
    USER ||--o{ CSPACE_MESSAGE : "sends"